--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
-nvidia-graphics-drivers (430.40-3) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (430.50-1) UNRELEASED; urgency=medium
 
+  * New upstream long lived branch release 430.50 (2019-09-11).
+
+  [ Andreas Beckmann ]
   * Restrict watch file to releases from the 430.xx long lived branch.
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 30 Aug 2019 14:43:21 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 14 Sep 2019 14:34:03 +0200
 
 nvidia-graphics-drivers (430.40-2) unstable; urgency=medium
 
@@ -64,6 +67,10 @@ nvidia-graphics-drivers (430.14-1) experimental; urgency=medium
       VDP_YCBCR_FORMAT_Y_U_V_444 for accessing YUV 4:4:4 surfaces via
       VdpVideoSurfaceGetBitsYCbCr() and VdpVideoSurfacePutBitsYCbCr()
       in the NVIDIA VDPAU driver.
+    - Fixed display color range handling on pre-Turing GPUs, such that when
+      limited color range is selected through the display controls page in
+      nvidia-settings, output pixel values will be correctly clamped to
+      Consumer Technology Association (CTA) range.
     - Added support for creation of YUV 4:4:4 video surfaces in
       the NVIDIA VDPAU driver.
     - Raised the minimum supported X.Org xserver version to 1.7 (video driver
