prefer arch headers over common headers

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ nvidia-graphics-drivers (430.50-1) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * Update nv-readme.ids.
   * Update symbols files.
+  * conftest-prefer-arch-headers.patch: New, prefer arch headers over common
+    headers, thanks to Paul Szabo.  (Closes: #933309)
   * Restrict watch file to releases from the 430.xx long lived branch.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 14 Sep 2019 14:34:03 +0200
