--- a/debian/changelog
+++ b/debian/changelog
@@ -61,6 +61,7 @@ nvidia-graphics-drivers (440.26-1) UNRELEASED; urgency=medium
       Power Management Support" chapter of the README for more details.
 
   [ Andreas Beckmann ]
+  * Update nv-readme.ids.
   * Continue building libegl1-nvidia.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 22 Oct 2019 11:58:11 +0200
