--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ nvidia-graphics-drivers (390.129-1) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * Bump Standards-Version to 4.4.1. No changes needed.
+  * debian/gen-control.pl: Support substitutions in the Architecture field.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 06 Aug 2019 19:04:49 +0200
 
