--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (418.88-2) UNRELEASED; urgency=medium
+
+  * Build the nvidia-*-common packages for ppc64el.
+
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 30 Oct 2019 11:21:31 +0100
+
 nvidia-graphics-drivers (418.88-1) unstable; urgency=medium
 
   * New upstream long lived branch release 418.88 (2019-07-29).
