--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (430.50-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (430.50-2) unstable; urgency=medium
 
   * debian/gen-control.pl: Support substitutions in the Architecture field and
     skip packages with empty or commented Architecture field.
@@ -7,7 +7,7 @@ nvidia-graphics-drivers (430.50-2) UNRELEASED; urgency=medium
     amd64 (including some i386 libs) and ppc64el).
   * Bump Standards-Version to 4.4.1. No changes needed.
 
- -- Andreas Beckmann <anbe@debian.org>  Wed, 30 Oct 2019 16:12:47 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 30 Oct 2019 21:04:31 +0100
 
 nvidia-graphics-drivers (430.50-1) unstable; urgency=medium
 
