--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nvidia-graphics-drivers (435.21-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (435.21-2) experimental; urgency=medium
 
   * Merge changes from 430.50-2.
   * Continue building nvidia-nonglvnd-vulkan-common.
   * Restrict watch file to releases from the 435.xx short lived branch.
 
- -- Andreas Beckmann <anbe@debian.org>  Thu, 31 Oct 2019 01:34:13 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 31 Oct 2019 15:07:11 +0100
 
 nvidia-graphics-drivers (435.21-1) experimental; urgency=medium
 
