--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (435.21-3) UNRELEASED; urgency=medium
+
+  * Continue building libegl1-nvidia.
+
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 01 Nov 2019 00:06:52 +0100
+
 nvidia-graphics-drivers (435.21-2) experimental; urgency=medium
 
   * Merge changes from 430.50-2.
