--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+nvidia-graphics-drivers (390.132-1) UNRELEASED; urgency=medium
+
+  * New upstream legacy branch release 390.132 (2019-11-08).
+    - Fixed kernel module build problems with Linux kernel 5.4.0 release
+      candidates.
+    - Updated nvidia-bug-report.sh to collect information about X server crashes
+      from coredumpctl, when available.
+  * New upstream legacy branch release 340 series.
+    - Updated the nvidia-drm kernel module for compatibility with the removal
+      of the DRIVER_PRIME flag in recent Linux kernel versions.
+
+  [ Andreas Beckmann ]
+  * debian/gen-control.pl: Support substitutions in the Architecture field and
+    skip packages with empty or commented Architecture field.
+  * Bump Standards-Version to 4.4.1. No changes needed.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 10 Nov 2019 12:53:49 +0100
+
 nvidia-graphics-drivers (390.129-1) UNRELEASED; urgency=medium
 
   * New upstream legacy branch release 390.129 (2019-07-29).
@@ -7,11 +25,6 @@ nvidia-graphics-drivers (390.129-1) UNRELEASED; urgency=medium
   * New upstream legacy branch release 340 series.
     - Updated nvidia-bug-report.sh to search the systemd journal for
       gdm-x-session logs.
-
-  [ Andreas Beckmann ]
-  * Bump Standards-Version to 4.4.1. No changes needed.
-  * debian/gen-control.pl: Support substitutions in the Architecture field and
-    skip packages with empty or commented Architecture field.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 06 Aug 2019 19:04:49 +0200
 
