--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ nvidia-graphics-drivers (418.113-1) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * Update nv-readme.ids.
+  * Refresh patches.
   * debian/gen-control.pl: Support substitutions in the Architecture field and
     skip packages with empty or commented Architecture field.
   * Build the nvidia-*-common packages for ppc64el.
