--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,16 @@
-nvidia-graphics-drivers (440.26-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (440.31-1) UNRELEASED; urgency=medium
 
+  * New upstream long lived branch release 440.31 (2019-11-04).
+    - Added support for the following GPUs: Tesla V100S-PCIE-32GB,
+      GeForce GTX 1660 SUPER.
+    - Fixed a regression in the 440.26 driver that could prevent the NVIDIA
+      kernel modules from building correctly on systems localized to a
+      language other than English.  (Closes: #944556)
+
+  [ Andreas Beckmann ]
   * Merge changes from 430.64-1.
 
- -- Andreas Beckmann <anbe@debian.org>  Sat, 16 Nov 2019 11:54:51 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 16 Nov 2019 12:01:37 +0100
 
 nvidia-graphics-drivers (440.26-1) experimental; urgency=medium
 
@@ -246,16 +254,16 @@ nvidia-graphics-drivers (430.14-1) experimental; urgency=medium
 nvidia-graphics-drivers (418.113-1) UNRELEASED; urgency=medium
 
   * New upstream long lived branch release 418.113 (2019-11-05).
-    - Fixed a bug that prevented NVIDIA GPUs from entering the low-power
-      D3 state when entering suspend-to-idle (s2idle). Note that on some
-      systems this may expose an existing timing issue in the Linux kernel;
-      see the "Known Issues and Workarounds" section of the "Configuring
-      Power Management Support" chapter of the README for more details.
     - Updated the Module.symvers sanity check, which is part of the NVIDIA
       kernel module build process, to accommodate the recent addition of a
       new field in the Module.symvers file format. This fixes the error
       "The Module.symvers file is missing [...]" seen during driver
       installation or DKMS rebuilds with Linux 5.4 RC kernels.
+    - Fixed a bug that prevented NVIDIA GPUs from entering the low-power
+      D3 state when entering suspend-to-idle (s2idle). Note that on some
+      systems this may expose an existing timing issue in the Linux kernel;
+      see the "Known Issues and Workarounds" section of the "Configuring
+      Power Management Support" chapter of the README for more details.
 
   [ Andreas Beckmann ]
   * Update nv-readme.ids.
