--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (440.31-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (440.31-1) experimental; urgency=medium
 
   * New upstream long lived branch release 440.31 (2019-11-04).
     - Added support for the following GPUs: Tesla V100S-PCIE-32GB,
@@ -12,7 +12,7 @@ nvidia-graphics-drivers (440.31-1) UNRELEASED; urgency=medium
   * Update nv-readme.ids.
   * Refresh patches.
 
- -- Andreas Beckmann <anbe@debian.org>  Sat, 16 Nov 2019 12:01:37 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 18 Nov 2019 00:28:08 +0100
 
 nvidia-graphics-drivers (440.26-1) experimental; urgency=medium
 
