--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (440.36-1) UNRELEASED; urgency=medium
+
+  * New upstream long lived branch release 440.36 (2019-11-22).
+    - Fixed graphical corruption that can occur when using
+      glslang SPIR-V Generator Version <= 2.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 24 Nov 2019 23:11:21 +0100
+
 nvidia-graphics-drivers (440.31-1) experimental; urgency=medium
 
   * New upstream long lived branch release 440.31 (2019-11-04).
