--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,11 @@ nvidia-graphics-drivers (304.137-1~svn4deb9stretch) UNRELEASED; urgency=medium
     symbols-file-missing-build-depends-package-field elsewhere (390.87-3).
   * Clean up and unify rule style in debian/rules (390.87-3).
   * Drop versioned constraints that are satisfied in wheezy (390.87-7).
+  * Allow alternative libnvidia-{tesla,legacy-*}-ml1 packages to substitute
+    libnvidia-ml1 (430.64-2).
+    - Add Provides: libnvidia-ml.so.1 (= ${nvidia:Version}).
+    - Generate alternative versioned dependency on libnvidia-ml.so.1 through
+      the symbols file.
   * Bump Standards-Version to 4.4.1. No changes needed.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 11 Oct 2017 02:02:40 +0200
