--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (430.64-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (430.64-2) unstable; urgency=medium
 
   * nvidia-detect: Add PCI ID list for 418.74 in buster.
   * nvidia-detect: Add support for Tesla drivers.
@@ -9,7 +9,7 @@ nvidia-graphics-drivers (430.64-2) UNRELEASED; urgency=medium
     - Generate alternative versioned dependency on libnvidia-ml.so.1 through
       the symbols file.
 
- -- Andreas Beckmann <anbe@debian.org>  Thu, 05 Dec 2019 12:00:33 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 05 Dec 2019 13:20:04 +0100
 
 nvidia-graphics-drivers (430.64-1) unstable; urgency=medium
 
