--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (430.64-3) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (430.64-3) unstable; urgency=medium
 
   * Allow alternative libnvidia-{tesla,legacy-*}-cuda1 packages to substitute
     libcuda1 in third-party packages.
@@ -6,7 +6,7 @@ nvidia-graphics-drivers (430.64-3) UNRELEASED; urgency=medium
     - Generate alternative versioned dependency on libcuda.so.1 through the
       symbols file.
 
- -- Andreas Beckmann <anbe@debian.org>  Mon, 09 Dec 2019 21:05:39 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 10 Dec 2019 13:01:16 +0100
 
 nvidia-graphics-drivers (430.64-2) unstable; urgency=medium
 
