--- a/debian/changelog
+++ b/debian/changelog
@@ -1,20 +1,5 @@
 nvidia-graphics-drivers (418.113-1~git) UNRELEASED; urgency=medium
 
-  * New upstream long lived branch release 418.113 (2019-11-05).
-    - Updated the Module.symvers sanity check, which is part of the NVIDIA
-      kernel module build process, to accommodate the recent addition of a
-      new field in the Module.symvers file format. This fixes the error
-      "The Module.symvers file is missing [...]" seen during driver
-      installation or DKMS rebuilds with Linux 5.4 RC kernels.
-    - Fixed a bug that prevented NVIDIA GPUs from entering the low-power
-      D3 state when entering suspend-to-idle (s2idle). Note that on some
-      systems this may expose an existing timing issue in the Linux kernel;
-      see the "Known Issues and Workarounds" section of the "Configuring
-      Power Management Support" chapter of the README for more details.
-
-  [ Andreas Beckmann ]
-  * Update nv-readme.ids.
-  * Refresh patches.
   * debian/gen-control.pl: Support substitutions in the Architecture field and
     skip packages with empty or commented Architecture field (430.50-2).
   * Build the nvidia-*-common packages for ppc64el (430.50-2).
@@ -35,6 +20,26 @@ nvidia-graphics-drivers (418.113-1~git) UNRELEASED; urgency=medium
     - Generate alternative versioned dependency on libcuda.so.1 through the
       symbols file.
   * Bump Standards-Version to 4.4.1. No changes needed.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 12 Nov 2019 05:46:46 +0100
+
+nvidia-graphics-drivers (418.113-1) UNRELEASED; urgency=medium
+
+  * New upstream long lived branch release 418.113 (2019-11-05).
+    - Updated the Module.symvers sanity check, which is part of the NVIDIA
+      kernel module build process, to accommodate the recent addition of a
+      new field in the Module.symvers file format. This fixes the error
+      "The Module.symvers file is missing [...]" seen during driver
+      installation or DKMS rebuilds with Linux 5.4 RC kernels.
+    - Fixed a bug that prevented NVIDIA GPUs from entering the low-power
+      D3 state when entering suspend-to-idle (s2idle). Note that on some
+      systems this may expose an existing timing issue in the Linux kernel;
+      see the "Known Issues and Workarounds" section of the "Configuring
+      Power Management Support" chapter of the README for more details.
+
+  [ Andreas Beckmann ]
+  * Update nv-readme.ids.
+  * Refresh patches.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 12 Nov 2019 05:46:46 +0100
 
