--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nvidia-graphics-drivers (430.64-4) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (430.64-4) unstable; urgency=medium
 
   * Do not build most non-GLVND packages (435.17-1).  (Closes: #939401)
 
- -- Andreas Beckmann <anbe@debian.org>  Sun, 15 Dec 2019 22:13:45 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 15 Dec 2019 22:39:11 +0100
 
 nvidia-graphics-drivers (430.64-3) unstable; urgency=medium
 
