--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+nvidia-graphics-drivers (340.107-1~git4deb8jessie) UNRELEASED; urgency=medium
+
+  * Convert packaging repository from SVN to GIT.
+  * Add debian/rules targets for archiving the tarballs in a separate
+    repository using sparse checkouts and git-lfs as storage backend
+    (390.87-3).
+  * Create and commit tarball symlinks for legacy branches (430.64-1).
+  * use-nv-kernel-ARCH.o_shipped.patch: Simplify for better kernel
+    compatibility.  (Closes: #922479)
+
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 21 Jun 2018 22:28:56 +0200
+
 nvidia-graphics-drivers (340.107-1) UNRELEASED; urgency=medium
 
   * New upstream legacy 340xx branch release 340.107 (2018-06-06).
@@ -7,15 +19,9 @@ nvidia-graphics-drivers (340.107-1) UNRELEASED; urgency=medium
     - Fixed a bug which could cause X servers that export a Video Driver
       ABI earlier than 0.8 to crash when running X11 applications which
       call XRenderAddTraps().
+    * Improved compatibility with recent Linux kernels.
 
   [ Andreas Beckmann ]
-  * Convert packaging repository from SVN to GIT.
-  * Add debian/rules targets for archiving the tarballs in a separate
-    repository using sparse checkouts and git-lfs as storage backend
-    (390.87-3).
-  * Create and commit tarball symlinks for legacy branches (430.64-1).
-  * use-nv-kernel-ARCH.o_shipped.patch: Simplify for better kernel
-    compatibility.  (Closes: #922479)
   * Refresh patches.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 21 Jun 2018 22:28:56 +0200
