--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,27 @@
+nvidia-graphics-drivers (440.59-1) UNRELEASED; urgency=medium
+
+  * New upstream long lived branch release 440.44 (2020-02-03).
+    - Disabled frame rate limiting for configurations without active
+      displays when HardDPMS is enabled.
+    - Restricted the maximum number of GPU Screens to one GPU Screen per
+      GPU device, to prevent X from crashing when more than one GPU Screen
+      is configured for a single GPU device.
+    - Fixed a bug that could cause the X server to crash while exiting
+      DPMS with HardDPMS enabled.
+    - Added support for the following GPUs: Tesla PG500-216, Tesla PG504-216.
+    - Added support for audio over DisplayPort Multi-Stream. This support
+      requires Linux kernel version 5.5 or newer.
+    - Updated the NVIDIA driver to allow NVIDIA High Definition Audio (HDA)
+      controllers to respond to display hotplug events while the HDA is
+      runtime-suspended.
+    - Fixed a bug that caused DXVK titles to endlessly loop during shader
+      compilation if no OpSource instruction was present.
+  * New upstream release 390 series.
+    - Add PRIME Synchronization support for Linux kernel 5.4 and newer.
+      (Closes: #948568)
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 04 Feb 2020 22:37:48 +0100
+
 nvidia-graphics-drivers (440.44-2) unstable; urgency=medium
 
   * Merge changes from 435.21-3.
@@ -20,6 +44,10 @@ nvidia-graphics-drivers (440.44-1) experimental; urgency=medium
       while loading nvidia.ko.
   * New upstream release 418 series.
     - Added support for the following GPU: Quadro T2000 with Max-Q Design.
+  * New upstream release 390 series.
+    - Fixed driver installation failure on Oracle Linux 7.7 systems,
+      where the NVIDIA kernel module failed to build with error "unknown
+      type name 'vm_fault_t'".
 
   [ Andreas Beckmann ]
   * Merge changes from 430.64-4.
