new upstream long lived branch release 440.64

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,20 @@
+nvidia-graphics-drivers (440.64-1) UNRELEASED; urgency=medium
+
+  * New upstream long lived branch release 440.64 (2020-02-28).
+    - Added support for the following GPUs: GeForce MX330, GeForce MX350.
+    - Fixed a regression that allowed displays to enter DPMS mode even
+      when DPMS is disabled in the X server settings.
+  * New upstream release 390 series.
+   - Fixed driver installation failure on Linux kernel 5.6 release
+     candidates, where the NVIDIA kernel module failed to build
+     with error "implicit declaration of function
+     'ioremap_nocache'".
+
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 28 Feb 2020 23:46:44 +0100
+
 nvidia-graphics-drivers (440.59-1) unstable; urgency=medium
 
-  * New upstream long lived branch release 440.44 (2020-02-03).
+  * New upstream long lived branch release 440.59 (2020-02-03).
     - Disabled frame rate limiting for configurations without active
       displays when HardDPMS is enabled.
     - Restricted the maximum number of GPU Screens to one GPU Screen per
