--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,35 @@
+nvidia-graphics-drivers (440.82-1) UNRELEASED; urgency=medium
+
+  * New upstream long lived branch release 440.82 (2020-04-07).
+    - Added a workaround for Steam Play title DOOM Eternal, which overrides
+      application requested memory locations, to ensure performance-critical
+      resources be placed in video memory.
+    - Allow presenting from queue families which only expose
+      VK_QUEUE_COMPUTE_BIT when using XCB in addition to Xlib surfaces.
+    - Fixed a bug that caused render-offloaded applications to crash on exit.
+  * New upstream release 390 series.
+   - Fixed a driver installation failure on Linux kernel 5.6 release
+     candidates, where the NVIDIA kernel module failed to build
+     with error "implicit declaration of function 'timespec_to_ns'".
+   - Fixed a driver installation failure on Linux kernel 5.6 release
+     candidates, where the NVIDIA kernel module failed to build
+     with error "implicit declaration of function 'getrawmonotonic'".
+   - Fixed a driver installation failure on Linux kernel 5.6 release
+     candidates, where the NVIDIA kernel module failed to build
+     with error "implicit declaration of function 'getnstimeofday'".
+   - Fixed a driver installation failure on Linux kernel 5.6 release
+     candidates, where the NVIDIA kernel module failed to build
+     with error "dereferencing pointer to incomplete type 'struct timeval'".
+   - Fixed a driver installation failure on Linux kernel 5.6 release
+     candidates, where the NVIDIA kernel module failed to build
+     with error "implicit declaration of function 'jiffies_to_timespec'".
+   - Fixed driver installation failure on Linux kernel 5.6 release
+     candidates, where the NVIDIA kernel module failed to build
+     with error "passing argument 4 of 'proc_create_data' from
+     incompatible pointer type".
+
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 08 Apr 2020 09:54:29 +0200
+
 nvidia-graphics-drivers (440.64-2) unstable; urgency=medium
 
   * Prepare infrastructure for packaging Tesla 440 driver releases (available
